--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,1 +1,24 @@
-edit
+.container
+  %ul
+    - @profile.errors.full_messages.each do |message|
+      %li= message
+
+  = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
+    %div
+      = f.label :accountname, 'アカウント名'
+    %div
+      = f.text_field :accountname, class: 'text'
+    %div
+      = f.label :pr, '自己紹介文'
+    %div
+      = f.text_area :pr
+    %div
+      = f.label :gender, '性別'
+    %div
+      = f.select :gender, Profile.genders.keys, {}, {class: 'text'}
+    %div
+      = f.label :birthday, '生年月日'
+    %div
+      = f.date_field :birthday, class: 'text'
+    
+    = f.submit '保存', class: 'btn-primary'
