--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,4 +1,8 @@
 .container
+  %ul
+    - @post.errors.full_messages.each do |message|
+      %li= message
+
   = form_with(model: @post, url: posts_path, method: 'post', local: true) do |f|
     %div
       = f.label :picture, '画像を選択'
