ユーザーと投稿の紐付け

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,4 +1,5 @@
 = @post.picture
 = @post.text
-= link_to 'edit', edit_post_path(@post)
-= link_to 'delete', post_path(@post), data: {method: 'delete', confirm: '本当に削除しますか？'}
+- if user_signed_in? && current_user.has_written?(@post)
+  = link_to 'edit', edit_post_path(@post)
+  = link_to 'delete', post_path(@post), data: {method: 'delete', confirm: '本当に削除しますか？'}
