--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,11 @@
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
 
   %body
+  
+    - if user_signed_in?
+      = link_to 'ログアウト', destroy_user_session_path, data: {method: 'delete'}
+    - else
+      = link_to 'ログイン', new_user_session_path
 
     - if flash.present?
       .flash
