--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -3,3 +3,4 @@
 - if user_signed_in? && current_user.has_written?(@post)
   = link_to 'edit', edit_post_path(@post)
   = link_to 'delete', post_path(@post), data: {method: 'delete', confirm: '本当に削除しますか？'}
+  = link_to 'comment', new_post_comment_path(@post)
