--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
 
   %body
   
+    = image_tag current_user.avatar_image
     - if user_signed_in?
       = link_to 'ログアウト', destroy_user_session_path, data: {method: 'delete'}
     - else
