--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,6 +1,11 @@
+= image_tag @post.user.avatar_image
 = @post.picture
 = @post.text
+
 - if user_signed_in? && current_user.has_written?(@post)
   = link_to 'edit', edit_post_path(@post)
   = link_to 'delete', post_path(@post), data: {method: 'delete', confirm: '本当に削除しますか？'}
   = link_to 'comment', new_post_comment_path(@post)
+
+- @comments.each do |comment|
+  = comment.content
