--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,4 +1,5 @@
-= image_tag @post.user.avatar_image
+= link_to account_path(@post.user) do
+  = image_tag @post.user.avatar_image
 = image_tag @post.picture
 = @post.text
 
