--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,8 +10,9 @@
 
   %body
 
-    = image_tag current_user.avatar_image
     - if user_signed_in?
+      = image_tag current_user.avatar_image
+      = link_to 'タイムライン', timeline_path
       = link_to 'ログアウト', destroy_user_session_path, data: {method: 'delete'}
       = link_to 'いいね一覧', favorites_path
     - else
