--- a/app/views/comments/new.html.haml
+++ b/app/views/comments/new.html.haml
@@ -8,4 +8,4 @@
       = f.label :content, 'コメント'
     %div
       = f.text_area :content
-    = f.submit 'コメントを投稿', class: 'btn-primary'
+    = f.submit 'コメントを投稿する', class: 'btn-primary'
