--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -1,8 +1,27 @@
-= image_tag @user.avatar_image
-- if user == current_user
-  = link_to 'edit', edit_profile_path
-- else
-  - if current_user&.has_followed?(user)
-    = link_to 'unfollow', account_unfollows_path(user), data: {method: 'post'}
-  = else
-    = link_to 'follow', account_follows_path(user), data: {method: 'post'}
+.container
+  - if user == current_user
+    .menu
+      .dropdown
+        = image_tag 'menu-bar.svg', class: 'dropbtn'
+        .dropdown_content
+          = link_to 'プロフィールを編集', edit_profile_path
+          = link_to 'ログアウト', destroy_user_session_path, data: {method: 'delete'}
+    .user_image
+      = image_tag user.avatar_image
+    .user_status
+      .user_status_posts
+        %div 64posts
+      .user_status_following
+        %div 120follow
+      .user_status_follower
+        %div 110follower
+    .user_pictures
+      - current_user.posts.each do |post|
+        = link_to post_path(post) do
+          - if post.picture.attached?
+            = image_tag post.picture
+  - else
+    - if current_user&.has_followed?(user)
+      = link_to 'unfollow', account_unfollows_path(user), data: {method: 'post'}
+    - else
+      = link_to 'follow', account_follows_path(user), data: {method: 'post'}
