--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -5,12 +5,8 @@
 
   = form_with(model: @post, url: post_path(@post), method: 'put', local: true) do |f|
     %div
-      = f.label :picture, '画像を選択'
-    %div
-      = f.file_field :picture
-    %div
-      = f.label :text, 'テキストを入力'
+      = f.label :text, 'テキストを編集'
     %div
       = f.text_area :text, class: 'content'
 
-    = f.submit '投稿', class: 'btn-primary'
+    = f.submit '更新する', class: 'btn-primary'
