--- a/app/assets/stylesheets/commons.scss
+++ b/app/assets/stylesheets/commons.scss
@@ -1,1 +1,34 @@
 $icon-size: 30px;
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    float: right;
+
+    img {
+        width: $icon-size;
+        height: $icon-size;
+    }
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0px;
+    background-color: #fff;
+    border: solid 1px darkgray;
+    min-width: 145px;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    display: block;
+    text-decoration: none;
+    color: royalblue;
+    padding: 3px 0 3px 5px;
+    font-size: 12px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
