--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -3,38 +3,8 @@
 .menu {
     width: 100%;
     height: $icon-size;
+    right: 0px;
 }
-
-.dropbtn {
-    border: none;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-    float: right;
-
-    img {
-        width: $icon-size;
-        height: $icon-size;
-    }
-}
-
-.dropdown_content {
-
-    position: absolute;
-    right: 0;
-    background-color: #fff;
-    min-width: 150px;
-    z-index: 1;
-}
-
-.dropdown_content a {
-    display: block;
-    text-decoration: none;
-    font-size: 14px;
-}
-
 
 .user_image {
     text-align: center;
@@ -45,6 +15,12 @@
         height: 60px;
         border-radius: 100%;
     }
+}
+
+.user_detail {
+    margin: 10px 0;
+    text-align: center;
+    font-size: large;
 }
 
 .user_status {
