--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -18,11 +18,64 @@ input {
 
 textarea {
     width: 100%;
-    height: 30px;
-    border: none;
-    border-bottom: solid 1px darkgray;
+    border: solid 1px darkgray;
+    border-radius: 4px;
     margin: 6px 0;
     font-size: 16px;
     color: darkgray;
 }
 
+.select-image {
+    cursor: pointer;
+    color: skyblue;
+    border: solid 1px skyblue;
+    border-radius: 4px;
+    width: 100px;
+    height: 30px;
+    padding: 0 5px;
+}
+
+.default-image {
+    display: none;
+}
+
+.before-preview {
+    margin: 10px 0 20px 0;
+    border: dotted 1px darkgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    color: darkgray;
+    &.picture {
+        width: 100%;
+        height: 250px;
+        border-radius: 4px;
+    }
+    &.avatar {
+        margin-left: auto;
+        margin-right: auto;
+        width: 250px;
+        height: 250px;
+    }
+}
+
+#picture_preview {
+    margin: 10px 0 20px 0;
+    img {
+        width: 100%;
+    }
+}
+
+#avatar_preview {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    img {
+        width: 250px;
+        height: 250px;
+    }
+}
