--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,17 +1,15 @@
 @import 'commons';
 
 .card {
-    margin: 24px 0 50px 0;
+    margin-bottom: 50px;
 
     &_top {
         display: flex;
         font-size: 5px;
         position: relative;
         img {
-            cursor: pointer;
             width: $icon-size;
             height: $icon-size;
-            border-radius: 100%;
         }
 
         .name {
@@ -58,9 +56,31 @@
     }
 
     &_comment {
-        p {
-            padding: 5px 0;
+        width: 100%;
+        display: flexbox;
+        position: relative;
+        padding: 20px;
+
+        .detail {
+            display: flex;
+            padding: 10px 0;
+            border-top: solid 1px darkgrey;
+            align-items: center;
         }
-        
+        .icon {
+            padding-right: 20px;
+            img {
+                width: $icon-size;
+                height: $icon-size;
+            }
+        }
+        .commenter {
+            font-size: 12px;
+        }
+        .text {
+            padding-top: 5px;
+            font-size: 12px;
+            color: darkgrey;
+        }
     }
 }
