--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -9,11 +9,9 @@
 .user_image {
     text-align: center;
     padding: 20px 0;
-
     img {
-        width: 60px;
-        height: 60px;
-        border-radius: 100%;
+        width: 80px;
+        height: 80px;
     }
 }
 
@@ -25,14 +23,33 @@
 
 .user_status {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
     padding: 20px 0;
+
 }
 
 .user_pictures {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
     img {
-        width: 100%;
-        padding: 5px 0;
+        width: 110px;
+        height: 110px;
+        object-fit: cover;
     }
+}
+
+.number {
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.count {
+    font-size: 12px;
 }
 
