--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,6 +1,7 @@
-.container
-  - @posts.each do |post|
-    = render 'commons/post',post: post
+#post_index.container
+  = render 'commons/post', posts: @posts
+
+  
   
 
 
