--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -5,8 +5,20 @@
 
   = form_with(model: @post, url: posts_path, method: 'post', local: true) do |f|
     %div
-      = f.file_field :picture
+      .select-image
+        = f.label :picture, '画像を選択'
+        = f.label :picture, icon('fas', 'camera', class: 'fa-lg')
+        = f.file_field :picture, class: 'default-image'
     %div
-      = f.text_area :text, class: 'text', value: 'テキストを入力'
+      #picture_preview
+        - if @post.picture.attached?
+          = image_tag post.picture
+        - else
+          .before-preview.picture
+            画像のプレビューが表示されます
+    %div
+      = f.label :text, 'テキストを入力'
+    %div
+      = f.text_area :text, class: 'text', rows: '5'
 
     = f.submit '投稿する', class: 'btn-primary'
