--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -5,9 +5,17 @@
 
   = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
     %div
-      = f.label :avatar, 'プロフィール画像'
+      .select-image
+        = f.label :avatar, '画像を選択'
+        = f.label :avatar, icon('fas', 'camera', class: 'fa-lg')
+        = f.file_field :avatar, class: 'default-image'
     %div
-      = f.file_field :avatar 
+      #avatar_preview.after-preview
+        - if @profile.avatar.attached?
+          = image_tag @profile.avatar, class: 'user-image'
+        - else
+          .before-preview.avatar
+            画像のプレビューが表示されます
     %div
       = f.label :accountname, 'アカウント名'
     %div
