ajaxによる「いいね」機能の実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
  @import 'font-awesome';
  @import 'devise';
  @import 'commons';
+ @import 'flash';
  @import 'posts';
  @import 'profile';
  @import 'form';
