--- a/app/views/commons/_like.html.haml
+++ b/app/views/commons/_like.html.haml
@@ -1,7 +1,7 @@
-- if current_user.has_liked?(post)
-  = link_to post_like_path(post), method: 'delete', remote: true do
+- if post.has_liked?(current_user.id)
+  = link_to post_like_path(post_id: post.id, id: post.likes[0].id), method: :delete, remote: true do
     = image_tag 'after-like.svg'
 - else
-  = link_to post_like_path(post), method: 'post', remote: true do
+  = link_to post_likes_path(post.id), method: :post, remote: true do
     = image_tag 'before-like.svg'
 = post.likes.count
