エラー表示の修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
  @import 'font-awesome';
  @import 'devise';
  @import 'commons';
- @import 'flash';
+ @import 'errors';
  @import 'posts';
  @import 'profile';
  @import 'form';
