--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,7 +1,7 @@
 .container
-  %ul
-    - @profile.errors.full_messages.each do |message|
-      %li= message
+  - @profile.errors.full_messages.each do |message|
+    .error
+      = message
 
   = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
     %div
