--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -36,10 +36,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-
     img {
         width: 110px;
         height: 110px;
+        margin-bottom: 4px;
         object-fit: cover;
     }
 }
