--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,12 +1,10 @@
+@import 'commons';
+
 .devise_title {
-    padding: 10px 0 20px 0;
+    padding: 30px 0 20px 0;
 }
 
 .devise_link {
     text-align: right;
     padding-top: 10px;
-    a {
-        text-decoration: none;
-        color: royalblue;
-    }
 }
