--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,7 +83,9 @@
  }
 
  .container {
-     height: 100vh;
+     min-height: 100vh;
+     padding-bottom: 50px;
+     box-sizing: border-box;
  }
 
  .hidden {
